0.8.1 + update atmosphere packages + overflow fix

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -9,6 +9,7 @@
 body, #main {
     margin: 0px;
     padding: 0px;
+    overflow-x: hidden;
     font-family: 'Fauna One', serif;
 }
 
